change the title of about.html

--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
   <meta http-equiv="content-type" content="text/html; charset=" utf-8">
   <meta name="author" content="LauraMellor">
   <meta name="description" content="portfolio of UX and UI design work">
-  <title>LauraMellor UX/UI Designer UKFreelance</title>
-  <link href="/img/favicons/safari-pinned-tab.svg" rel="shortcut icon">
+  <title>About Laura Mellor</title>
+  <link href="/img/favicon.ico" rel="shortcut icon">
 </head>
 
 <body>
