--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=" utf-8">
+  <meta http-equiv="content-type" content="text/html" charset="utf-8">
   <meta name="author" content="LauraMellor">
   <meta name="description" content="portfolio of UX and UI design work">
   <title>LauraMellor UX/UI Designer UKFreelance</title>
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/img/favicons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicons/favicon-16x16.png">
-  <link rel="manifest" href="/img/favicons/site.webmanifest">
-  <link rel="mask-icon" href="/img/favicons/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
+  <link rel="manifest" href="img/favicons/site.webmanifest">
+  <link rel="mask-icon" href="img/favicons/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 </head>
@@ -63,7 +63,7 @@
             <p>Allowing users to navigate swiftly between waymarker, map, and AR views for an expedited and pleasurable user journey.</p>
             <p>My process includes User Research / Testing and competitor analysis through to the final UI (adhering to the Human Interface and Material Design Guidelines)</p>
             <p>Tools: Sketch, Usability Hub, Invision</p>
-            <a href="">Read More</a>
+            <a href="ramble-pal.html">Read More</a>
           </div><!-- end second column -->
         </div><!-- end row that contains (2) columns for project -->
         <div>
@@ -108,7 +108,7 @@
         <ul>
           <!-- LinkedIn Icon -->
           <li><a href="https://www.linkedin.com/in/laura-mellor-69940a1b6/" target="_blank">
-              <svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'><svg height="100%" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1" viewBox="0 0 512 512"
+              <svg height="100%" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1" viewBox="0 0 512 512"
                   width="100%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink">
                   <g id="g5891">
                     <path d="M512,64c0,-35.323 -28.677,-64 -64,-64l-384,0c-35.323,0 -64,28.677 -64,64l0,384c0,35.323 28.677,64 64,64l384,0c35.323,0 64,-28.677 64,-64l0,-384Z" id="background" style="fill:#2867b2;" />
@@ -122,11 +122,10 @@
                     </g>
                   </g>
                 </svg>
-              </svg>
             </a></li>
           <!-- Behance Icon -->
           <li><a href="https://www.behance.net/lauramellorui" target="_blank">
-              <svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'><svg height="6.82666in"
+              <svg height="6.82666in"
                   style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" viewBox="0 0 6.82666 6.82666" width="6.82666in" xml:space="preserve"
                   xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                   <defs>
