--- a/ramble-pal.html
+++ b/ramble-pal.html
@@ -5,7 +5,7 @@
   <meta http-equiv="content-type" content="text/html" charset="utf-8">
   <meta name="author" content="LauraMellor">
   <meta name="description" content="portfolio of UX and UI design work">
-  <title>LauraMellor UX/UI Designer UKFreelance</title>
+  <title>Ramble Pal Case Study</title>
 
   <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
