--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <meta name="description" content="portfolio of UX and UI design work">
   <title>LauraMellor UX/UI Designer UKFreelance</title>
 
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
@@ -14,11 +18,19 @@
   <link rel="mask-icon" href="img/favicons/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+
 </head>
 
-<body>
+<body class="page" id="home">
   <!-- For the header -->
-  <header>
+  <header class="banner" id="header">
     <div>
       <a href="index.html"><img src="img/logo.jpg" alt="Laura Mellor UI"></a>
       <nav>
@@ -31,7 +43,7 @@
     </div>
   </header>
 
-  <main>
+  <main class="banner" id="introduction">
     <!-- For the intro section -->
     <div>
       <div>
@@ -63,7 +75,7 @@
             <p>Allowing users to navigate swiftly between waymarker, map, and AR views for an expedited and pleasurable user journey.</p>
             <p>My process includes User Research / Testing and competitor analysis through to the final UI (adhering to the Human Interface and Material Design Guidelines)</p>
             <p>Tools: Sketch, Usability Hub, Invision</p>
-            <a href="ramble-pal.html">Read More</a>
+            <a href="ramble-pal.html" class="button">Read more</a>
           </div><!-- end second column -->
         </div><!-- end row that contains (2) columns for project -->
         <div>
@@ -83,7 +95,7 @@
             <p>Allowing users to monitor and improve their global footprint by amending recipes. Design process includes User Research / Personas through to Responsive Designs and prototyping in order to convey complex information at a glance.
             </p>
             <p>Tools: Sketch, Usability Hub, Invision</p>
-            <a href="">Read More</a>
+            <a href="" class="button">Read more</a>
           </div><!-- end second column -->
         </div><!-- end row that contains (2) columns for project -->
       </div>
@@ -91,14 +103,14 @@
   </main>
 
   <!-- For the Footer -->
-  <footer id="contact">
+  <footer class="banner" id="contact">
     <div>
       <h2>Get in Touch</h2>
       <p>
         If you're interested in collaborating on a project or have any questions please send me an email via the link below
       </p>
       <div>
-        <a href="mailto:lauramellorui@gmail.com">Email me</a>
+        <a href="mailto:lauramellorui@gmail.com" class="button contact">Email Me</a>
       </div>
       <p>
         You may also call me at <a href="tel:+700000000">+70 0000000</a> or Skype me at <a href="skype:link">skype.link</a>
