--- a/ramble-pal.html
+++ b/ramble-pal.html
@@ -7,6 +7,10 @@
   <meta name="description" content="portfolio of UX and UI design work">
   <title>Ramble Pal Case Study</title>
 
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
@@ -14,9 +18,18 @@
   <link rel="mask-icon" href="img/favicons/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+
+
 </head>
 
-<body>
+<body class="page" id="ramblepal">
   <!-- For the header -->
   <header>
     <div>
@@ -292,46 +305,44 @@
         <ul>
           <!-- LinkedIn Icon -->
           <li><a href="https://www.linkedin.com/in/laura-mellor-69940a1b6/" target="_blank">
-              <svg height="100%" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1" viewBox="0 0 512 512"
-                  width="100%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink">
-                  <g id="g5891">
-                    <path d="M512,64c0,-35.323 -28.677,-64 -64,-64l-384,0c-35.323,0 -64,28.677 -64,64l0,384c0,35.323 28.677,64 64,64l384,0c35.323,0 64,-28.677 64,-64l0,-384Z" id="background" style="fill:#2867b2;" />
-                    <g id="shapes">
-                      <rect height="257.962" id="rect11" style="fill:#fff;" width="85.76" x="61.053" y="178.667" />
-                      <path d="M104.512,54.28c-29.341,0 -48.512,19.29 -48.512,44.573c0,24.752 18.588,44.574 47.377,44.574l0.554,0c29.903,0 48.516,-19.822 48.516,-44.574c-0.555,-25.283 -18.611,-44.573 -47.935,-44.573Z" id="path13-0"
-                        style="fill:#fff;fill-rule:nonzero;" />
-                      <path
-                        d="M357.278,172.601c-45.49,0 -65.866,25.017 -77.276,42.589l0,-36.523l-85.738,0c1.137,24.197 0,257.961 0,257.961l85.737,0l0,-144.064c0,-7.711 0.554,-15.42 2.827,-20.931c6.188,-15.4 20.305,-31.352 43.993,-31.352c31.012,0 43.436,23.664 43.436,58.327l0,138.02l85.741,0l0,-147.93c0,-79.237 -42.305,-116.097 -98.72,-116.097Z"
-                        id="path15" style="fill:#fff;fill-rule:nonzero;" />
-                    </g>
+              <svg height="100%" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1" viewBox="0 0 512 512" width="100%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
+                xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <g id="g5891">
+                  <path d="M512,64c0,-35.323 -28.677,-64 -64,-64l-384,0c-35.323,0 -64,28.677 -64,64l0,384c0,35.323 28.677,64 64,64l384,0c35.323,0 64,-28.677 64,-64l0,-384Z" id="background" style="fill:#2867b2;" />
+                  <g id="shapes">
+                    <rect height="257.962" id="rect11" style="fill:#fff;" width="85.76" x="61.053" y="178.667" />
+                    <path d="M104.512,54.28c-29.341,0 -48.512,19.29 -48.512,44.573c0,24.752 18.588,44.574 47.377,44.574l0.554,0c29.903,0 48.516,-19.822 48.516,-44.574c-0.555,-25.283 -18.611,-44.573 -47.935,-44.573Z" id="path13-0"
+                      style="fill:#fff;fill-rule:nonzero;" />
+                    <path
+                      d="M357.278,172.601c-45.49,0 -65.866,25.017 -77.276,42.589l0,-36.523l-85.738,0c1.137,24.197 0,257.961 0,257.961l85.737,0l0,-144.064c0,-7.711 0.554,-15.42 2.827,-20.931c6.188,-15.4 20.305,-31.352 43.993,-31.352c31.012,0 43.436,23.664 43.436,58.327l0,138.02l85.741,0l0,-147.93c0,-79.237 -42.305,-116.097 -98.72,-116.097Z"
+                      id="path15" style="fill:#fff;fill-rule:nonzero;" />
                   </g>
-                </svg>
+                </g>
               </svg>
             </a></li>
           <!-- Behance Icon -->
           <li><a href="https://www.behance.net/lauramellorui" target="_blank">
-              <svg height="6.82666in"
-                  style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" viewBox="0 0 6.82666 6.82666" width="6.82666in" xml:space="preserve"
-                  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                  <defs>
-                    <style type="text/css">
-                      <![CDATA[
-                      .fil0 {
-                        fill: #039BE5
-                      }
+              <svg height="6.82666in" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" viewBox="0 0 6.82666 6.82666" width="6.82666in"
+                xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <defs>
+                  <style type="text/css">
+                    <![CDATA[
+                    .fil0 {
+                      fill: #039BE5
+                    }
 
-                      .fil1 {
-                        fill: #F1F2F2
-                      }
-                      ]]>
-                    </style>
-                  </defs>
-                  <g id="Layer_x0020_1">
-                    <rect class="fil0" height="6.82667" rx="1.45635" ry="1.45635" width="6.82667" />
-                    <path class="fil1"
-                      d="M4.59622 2.84269c-0.951638,0 -0.952823,0.947909 -0.952823,0.952819 0,0 -0.0650394,0.948783 0.952823,0.948783 0,0 0.848661,0.0484606 0.848661,-0.660319l-0.435776 0c0,0 0.014315,0.266886 -0.398571,0.266886 0,0 -0.435776,0.0290039 -0.435776,-0.431217l1.28473 0c0,0 0.141382,-1.07695 -0.863268,-1.07695zm-0.426394 0.744961c0,0 0.0530787,-0.381614 0.435858,-0.381614 0.384197,0 0.37787,0.381614 0.37787,0.381614l-0.813728 0zm-1.08898 -0.244c0,0 0.377957,-0.0275276 0.377957,-0.471957 0,-0.443287 -0.309106,-0.660614 -0.701646,-0.660614l-1.29085 -1.9685e-005 0 2.48134 1.29085 0c0,0 0.788469,0.0243622 0.788469,-0.732917 0,0 0.0338346,-0.615835 -0.46478,-0.615835zm-1.04568 -0.691886l0.721992 0c0,0 0.175193,0 0.175193,0.258315 0,0.258358 -0.102681,0.295957 -0.219906,0.295957l-0.67728 0 0 -0.554272zm0.685874 1.59993l-0.685874 0 0 -0.664047 0.721992 0c0,0 0.262039,-0.0022874 0.260937,0.341748 0,0.289858 -0.194437,0.319945 -0.297055,0.322299zm1.34126 -1.89441l0 0.305339 1.02396 0 0 -0.305339 -1.02396 0z" />
-                  </g>
-                </svg>
+                    .fil1 {
+                      fill: #F1F2F2
+                    }
+                    ]]>
+                  </style>
+                </defs>
+                <g id="Layer_x0020_1">
+                  <rect class="fil0" height="6.82667" rx="1.45635" ry="1.45635" width="6.82667" />
+                  <path class="fil1"
+                    d="M4.59622 2.84269c-0.951638,0 -0.952823,0.947909 -0.952823,0.952819 0,0 -0.0650394,0.948783 0.952823,0.948783 0,0 0.848661,0.0484606 0.848661,-0.660319l-0.435776 0c0,0 0.014315,0.266886 -0.398571,0.266886 0,0 -0.435776,0.0290039 -0.435776,-0.431217l1.28473 0c0,0 0.141382,-1.07695 -0.863268,-1.07695zm-0.426394 0.744961c0,0 0.0530787,-0.381614 0.435858,-0.381614 0.384197,0 0.37787,0.381614 0.37787,0.381614l-0.813728 0zm-1.08898 -0.244c0,0 0.377957,-0.0275276 0.377957,-0.471957 0,-0.443287 -0.309106,-0.660614 -0.701646,-0.660614l-1.29085 -1.9685e-005 0 2.48134 1.29085 0c0,0 0.788469,0.0243622 0.788469,-0.732917 0,0 0.0338346,-0.615835 -0.46478,-0.615835zm-1.04568 -0.691886l0.721992 0c0,0 0.175193,0 0.175193,0.258315 0,0.258358 -0.102681,0.295957 -0.219906,0.295957l-0.67728 0 0 -0.554272zm0.685874 1.59993l-0.685874 0 0 -0.664047 0.721992 0c0,0 0.262039,-0.0022874 0.260937,0.341748 0,0.289858 -0.194437,0.319945 -0.297055,0.322299zm1.34126 -1.89441l0 0.305339 1.02396 0 0 -0.305339 -1.02396 0z" />
+                </g>
+              </svg>
             </a></li>
         </ul>
       </div>
