create a link to the GloBowl project page

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <p>Allowing users to monitor and improve their global footprint by amending recipes. Design process includes User Research / Personas through to Responsive Designs and prototyping in order to convey complex information at a glance.
             </p>
             <p>Tools: Sketch, Usability Hub, Invision</p>
-            <a href="" class="button">Read more</a>
+            <a href="globowl.html" class="button">Read more</a>
           </div><!-- end second column -->
         </div><!-- end row that contains (2) columns for project -->
       </div>
