update about page

--- a/about.html
+++ b/about.html
@@ -31,8 +31,8 @@
 <body class="page" id="about">
   <!-- For the header -->
   <header>
-    <div>
-      <a href="index.html"><img src="img/logo.jpg" alt="Laura Mellor UI"></a>
+    <div class="container">
+      <a href="index.html" class="logo"><img src="img/logo2.jpg" alt="Laura Mellor UI"></a>
       <nav>
         <ul>
           <li><a href="index.html">Work</a></li>
@@ -44,26 +44,27 @@
   </header>
 
   <main>
-    <div>
+    <div class="container">
       <div>
-        <h1>About</h1>
+        <h1>My Story</h1>
       </div>
     </div>
-    <div>
+    <div class="container">
       <!-- orange open -->
       <div>
         <!-- yellow open -->
-        <picture>
-          <source srcset="img/headshot1x.png" media="(max-width:767px)">
+        <div class="floatleft" style="width: 30vw;">
+          <picture>
+          <source srcset="img/headshot1x.png" media="(max-width:40em)">
           <img src="img/headshot2x.png" alt="My Headshot">
         </picture>
+        </div>
         <div>
           <!-- green open -->
           <!-- open row that contains (3) columns for About -->
           <div>
             <!-- aqua open -->
             <!-- open first column (my story) -->
-            <h2>My Story</h2>
             <p>
               I'm a UI designer skilled at empathetic design that puts the user at the centre of the process. I had a career in acting where empathy is the core value; it's essential to view things from multiple perspectives and explore divergent
               possibilities. I transitioned to UI Design to utilise my background in creative thinking; I'm constantly asking what other ways a user may view or interpret a product and aim to offer the most efficient, and pleasurable experience
@@ -130,7 +131,7 @@
 
   <!-- For the Footer -->
   <footer id="contact">
-    <div>
+    <div class="container">
       <h2>Get in Touch</h2>
       <p>
         If you're interested in collaborating on a project or have any questions please send me an email via the link below
@@ -143,11 +144,11 @@
       </p>
       <div>
         <!--Social Media Layout and placeholders -->
-        <ul>
+        <ul class="social">
           <!-- LinkedIn Icon -->
-          <li><a href="https://www.linkedin.com/in/laura-mellor-69940a1b6/" target="_blank">
-              <svg height="100%" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1" viewBox="0 0 512 512"
-                  width="100%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <li><a href="https://www.linkedin.com/in/laura-mellor-69940a1b6/" target="_blank" class="icons">
+              <svg height="16%" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1" viewBox="0 0 512 512"
+                  width="16%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink">
                   <g id="g5891">
                     <path d="M512,64c0,-35.323 -28.677,-64 -64,-64l-384,0c-35.323,0 -64,28.677 -64,64l0,384c0,35.323 28.677,64 64,64l384,0c35.323,0 64,-28.677 64,-64l0,-384Z" id="background" style="fill:#2867b2;" />
                     <g id="shapes">
@@ -162,9 +163,9 @@
                 </svg>
             </a></li>
           <!-- Behance Icon -->
-          <li><a href="https://www.behance.net/lauramellorui" target="_blank">
-              <svg height="6.82666in"
-                  style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" viewBox="0 0 6.82666 6.82666" width="6.82666in" xml:space="preserve"
+          <li><a href="https://www.behance.net/lauramellorui" target="_blank" class="icons">
+              <svg height="16%"
+                  style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" viewBox="0 0 6.82666 6.82666" width="16%" xml:space="preserve"
                   xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                   <defs>
                     <style type="text/css">
