--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 <body class="page" id="home">
   <!-- For the header -->
   <header class="banner" id="header">
-    <div>
-      <a href="index.html"><img src="img/logo.jpg" alt="Laura Mellor UI"></a>
+    <div class="container">
+      <a href="index.html" class="logo"><img src="img/logo2.jpg" alt="Laura Mellor UI"></a>
       <nav>
         <ul>
           <li><a href="index.html">Work</a></li>
@@ -43,22 +43,23 @@
     </div>
   </header>
 
-  <main class="banner" id="introduction">
+  <main class="banner">
     <!-- For the intro section -->
-    <div>
-      <div>
-        <h1>Hi, I'm Laura Mellor
-          <br><span>I am a Freelance UX / UI Designer based in the UK</span>
-        </h1>
+    <div class="container" id="intro">
+      <div class="center">
+        <h1>Hi, I'm Laura Mellor</h1>
+        <h3>I am a Freelance UX / UI Designer based in the UK</h3>
       </div>
+      <div class="center">
       <p>With a background in professional acting I understand empathetic design and how to appreciate multiple perspectives whilst always putting the user at the centre.</p>
+</div>
     </div>
 
     <!-- For your work/projects -->
-    <div>
+    <div class="container" id="work">
       <div>
         <h2>My Work</h2>
-        <div>
+        <div class="row">
           <!-- open row that contains (2) columns for project -->
           <div>
             <!-- open first column (image) -->
@@ -103,8 +104,8 @@
   </main>
 
   <!-- For the Footer -->
-  <footer class="banner" id="contact">
-    <div>
+  <footer class="footer" id="contact">
+    <div class="container">
       <h2>Get in Touch</h2>
       <p>
         If you're interested in collaborating on a project or have any questions please send me an email via the link below
@@ -117,11 +118,11 @@
       </p>
       <div>
         <!--Social Media Layout and placeholders -->
-        <ul>
+        <ul class="social">
           <!-- LinkedIn Icon -->
-          <li><a href="https://www.linkedin.com/in/laura-mellor-69940a1b6/" target="_blank">
-              <svg height="100%" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1" viewBox="0 0 512 512"
-                  width="100%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <li><a href="https://www.linkedin.com/in/laura-mellor-69940a1b6/" target="_blank" class="icons">
+              <svg height="16%" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1" viewBox="0 0 512 512"
+                  width="16%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink">
                   <g id="g5891">
                     <path d="M512,64c0,-35.323 -28.677,-64 -64,-64l-384,0c-35.323,0 -64,28.677 -64,64l0,384c0,35.323 28.677,64 64,64l384,0c35.323,0 64,-28.677 64,-64l0,-384Z" id="background" style="fill:#2867b2;" />
                     <g id="shapes">
@@ -136,9 +137,9 @@
                 </svg>
             </a></li>
           <!-- Behance Icon -->
-          <li><a href="https://www.behance.net/lauramellorui" target="_blank">
-              <svg height="6.82666in"
-                  style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" viewBox="0 0 6.82666 6.82666" width="6.82666in" xml:space="preserve"
+          <li><a href="https://www.behance.net/lauramellorui" target="_blank" class="icons">
+              <svg height="16%"
+                  style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" viewBox="0 0 6.82666 6.82666" width="16%" xml:space="preserve"
                   xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                   <defs>
                     <style type="text/css">
