--- a/globowl.html
+++ b/globowl.html
@@ -242,7 +242,7 @@
                 </picture>
               </div>
               <div class="padtop">
-              <div class="floatleft" style="width: 40vw;">
+              <div style="width: 40vw;">
                 <picture>
                   <source srcset="img/globowl/globowl-footprint-1x.png" media="(max-width:60em)">
                   <img src="img/globowl/globowl-footprint-2x.png" alt="Style Guide imgage">
