--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
       <!-- orange open -->
       <div>
         <!-- yellow open -->
-        <div class="floatleft" style="width: 30vw;">
+        <div style="width: 30vw;">
           <picture>
           <source srcset="img/headshot1x.png" media="(max-width:40em)">
           <img src="img/headshot2x.png" alt="My Headshot">
