--- a/ramble-pal.html
+++ b/ramble-pal.html
@@ -29,12 +29,12 @@
 
 </head>
 
-<body class="page" id="ramblepal">
+<body class="page" id="home">
   <!-- For the header -->
-  <header>
+  <header class="banner" id="header">
     <div class="container">
-      <a href="index.html" class="logo"><img src="img/logo2.jpg" alt="Laura Mellor UI"></a>
-      <nav>
+      <a href="index.html"><img class="logo" src="img/logo2.jpg" alt="Laura Mellor UI"></a>
+        <nav>
         <ul>
           <li><a href="index.html">Work</a></li>
           <li><a href="about.html">About</a></li>
@@ -297,13 +297,13 @@
 
   <!-- For the Footer -->
   <footer id="contact">
-    <div class="footer">
+    <div class="footer container">
       <h2>Get in Touch</h2>
       <p>
         If you're interested in collaborating on a project or have any questions please send me an email via the link below
       </p>
       <div>
-        <a href="mailto:lauramellorui@gmail.com">Email me</a>
+        <a href="mailto:lauramellorui@gmail.com" class="button contact">Email Me</a>
       </div>
       <p>
         You may also call me at <a href="tel:+700000000">+70 0000000</a> or Skype me at <a href="skype:link">skype.link</a>
