add link to js file

--- a/about.html
+++ b/about.html
@@ -28,20 +28,20 @@
 
 </head>
 
-  <body class="page" id="home">
-    <!-- For the header -->
-    <header class="banner" id="header">
-      <div class="container">
-        <a href="index.html"><img class="logo" src="img/logo2.jpg" alt="Laura Mellor UI"></a>
-          <nav>
-          <ul>
-            <li><a href="index.html">Work</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+<body class="page" id="home">
+  <!-- For the header -->
+  <header class="banner" id="header">
+    <div class="container">
+      <a href="index.html"><img class="logo" src="img/logo2.jpg" alt="Laura Mellor UI"></a>
+      <nav>
+        <ul>
+          <li><a href="index.html">Work</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
   <main>
     <div class="container">
@@ -193,6 +193,7 @@
       <p>Copyright Laura Mellor 2021</p>
     </div>
   </footer>
+  <script src="js/scripts.js"></script>
 </body>
 
 </html>
