add a link to my CV

--- a/about.html
+++ b/about.html
@@ -38,6 +38,7 @@
           <ul>
             <li><a href="index.html">Work</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="files/cv.pdf" download target="_blank">CV</a></li>
             <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
             <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
           </ul>
@@ -87,7 +88,7 @@
               like to unwind with either an early morning run or an evening dram of whisky alongside a good film and some knitting.
             </p>
             <div class="center">
-              <a href="files/cv.pdf" class="button" download>Download My CV</a>
+              <a href="files/cv.pdf" class="button" download target="_blank">Download My CV</a>
             </div>
           </div> <!-- aqua close -->
           <!-- end first column -->
