add CV and project links

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           <ul>
             <li><a href="index.html">Work</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="files/cv.pdf" download target="_blank">CV</a></li>
             <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
             <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
           </ul>
@@ -64,13 +65,15 @@
             <!-- open first column (image) -->
             <picture>
               <source srcset="img/ramblepal/front-1x.png" media="(max-width:767px)">
-              <img src="img/ramblepal/front-2x.png" alt="Ramble Pal Image">
+              <a href="ramble-pal.html"> <img src="img/ramblepal/front-2x.png" alt="Ramble Pal Image"></a>
             </picture>
           </div>
           <!--end first column -->
           <div class="col-md-6 col-lg-5">
             <!-- open second column -->
-            <h3>Ramble Pal</h3>
+            <div class="linkhead">
+            <h3><a href="ramble-pal.html">Ramble Pal</a></h3>
+          </div>
             <h4>Native iOS & Android Hiking App UI Case Study</h4>
             <p>Allowing users to navigate swiftly between waymarker, map, and AR views for an expedited and pleasurable user journey.</p>
             <p>My process includes User Research / Testing and competitor analysis through to the final UI (adhering to the Human Interface and Material Design Guidelines)</p>
@@ -84,13 +87,15 @@
             <!-- open first column (image) -->
             <picture>
               <source srcset="img/globowl/responsive-screens-1x.png" media="(max-width:767px)">
-              <img src="img/globowl/responsive-screens-2x.png" alt="GloBowl Image">
+              <a href="globowl.html"> <img src="img/globowl/responsive-screens-2x.png" alt="GloBowl Image"></a>
             </picture>
           </div>
           <!--end first column -->
           <div class="col-md-6 col-lg-5">
             <!-- open second column -->
-            <h3>GloBowl</h3>
+            <div class="linkhead">
+            <h3><a href="globowl.html">GloBowl</a></h3>
+          </div>
             <h4>Responsive Web Recipe App UX / UI Case Study</h4>
             <p>Allowing users to monitor and improve their global footprint by amending recipes. Design process includes User Research / Personas through to Responsive Designs and prototyping in order to convey complex information at a glance.
             </p>
