--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta http-equiv="content-type" content="text/html" charset="utf-8">
+  <meta http-equiv="content-type" content="text/html">
+  <meta charset="utf-8">
   <meta name="author" content="LauraMellor">
   <meta name="description" content="portfolio of UX and UI design work">
   <title>LauraMellor UX/UI Designer UKFreelance</title>
@@ -25,7 +26,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-<script src="https://kit.fontawesome.com/e6aa32bfe8.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/e6aa32bfe8.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="page" id="home">
@@ -63,17 +64,19 @@
           <!-- open row that contains (2) columns for project -->
           <div class="col-md-6 col-lg-7">
             <!-- open first column (image) -->
+            <a href="ramble-pal.html">
             <picture>
               <source srcset="img/ramblepal/front-1x.png" media="(max-width:767px)">
-              <a href="ramble-pal.html"> <img src="img/ramblepal/front-2x.png" alt="Ramble Pal Image"></a>
+              <img src="img/ramblepal/front-2x.png" alt="Ramble Pal Project Image">
             </picture>
+            </a>
           </div>
           <!--end first column -->
           <div class="col-md-6 col-lg-5">
             <!-- open second column -->
             <div class="linkhead">
-            <h3><a href="ramble-pal.html">Ramble Pal</a></h3>
-          </div>
+              <h3><a href="ramble-pal.html">Ramble Pal</a></h3>
+            </div>
             <h4>Native iOS & Android Hiking App UI Case Study</h4>
             <p>Allowing users to navigate swiftly between waymarker, map, and AR views for an expedited and pleasurable user journey.</p>
             <p>My process includes User Research / Testing and competitor analysis through to the final UI (adhering to the Human Interface and Material Design Guidelines)</p>
@@ -85,17 +88,19 @@
           <!-- open row that contains (2) columns for project -->
           <div class="col-md-6 col-lg-7">
             <!-- open first column (image) -->
+            <a href="globowl.html">
             <picture>
               <source srcset="img/globowl/responsive-screens-1x.png" media="(max-width:767px)">
-              <a href="globowl.html"> <img src="img/globowl/responsive-screens-2x.png" alt="GloBowl Image"></a>
+              <img src="img/globowl/responsive-screens-2x.png" alt="GloBowl Project Image">
             </picture>
+            </a>
           </div>
           <!--end first column -->
           <div class="col-md-6 col-lg-5">
             <!-- open second column -->
             <div class="linkhead">
-            <h3><a href="globowl.html">GloBowl</a></h3>
-          </div>
+              <h3><a href="globowl.html">GloBowl</a></h3>
+            </div>
             <h4>Responsive Web Recipe App UX / UI Case Study</h4>
             <p>Allowing users to monitor and improve their global footprint by amending recipes. Design process includes User Research / Personas through to Responsive Designs and prototyping in order to convey complex information at a glance.
             </p>
@@ -107,9 +112,8 @@
           <!-- open row that contains (2) columns for project -->
           <div class="col-md-6 col-lg-7">
             <!-- open first column (image) -->
-            <?xml version="1.0" encoding="UTF-8" standalone="no"?>
             <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 1000 666.66669" max-width="767" xml:space="preserve" id="svg2" version="1.1">
+              viewBox="0 0 1000 666.66669" xml:space="preserve" id="svg2" version="1.1">
               <metadata id="metadata8">
                 <rdf:RDF>
                   <cc:Work rdf:about="">
