update menu animation

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
           <div class="col-md-6 col-lg-7">
             <!-- open first column (image) -->
             <a href="ramble-pal.html">
-            <picture>
-              <source srcset="img/ramblepal/front-1x.png" media="(max-width:767px)">
-              <img src="img/ramblepal/front-2x.png" alt="Ramble Pal Project Image">
-            </picture>
+              <picture>
+                <source srcset="img/ramblepal/front-1x.png" media="(max-width:767px)">
+                <img src="img/ramblepal/front-2x.png" alt="Ramble Pal Project Image">
+              </picture>
             </a>
           </div>
           <!--end first column -->
@@ -89,10 +89,10 @@
           <div class="col-md-6 col-lg-7">
             <!-- open first column (image) -->
             <a href="globowl.html">
-            <picture>
-              <source srcset="img/globowl/responsive-screens-1x.png" media="(max-width:767px)">
-              <img src="img/globowl/responsive-screens-2x.png" alt="GloBowl Project Image">
-            </picture>
+              <picture>
+                <source srcset="img/globowl/responsive-screens-1x.png" media="(max-width:767px)">
+                <img src="img/globowl/responsive-screens-2x.png" alt="GloBowl Project Image">
+              </picture>
             </a>
           </div>
           <!--end first column -->
@@ -486,9 +486,11 @@
       <div>
         <a href="mailto:lauramellorui@gmail.com" class="button contact">Email Me</a>
       </div>
-      <p>
-        You may also call me at <a href="tel:+700000000">+70 0000000</a> or Skype me at <a href="skype:link">skype.link</a>
-      </p>
+      <div class="contact">
+        <p>
+          You may also call me at <a href="tel:+700000000">+70 0000000</a> or Skype me at <a href="skype:link">skype.link</a>
+        </p>
+      </div>
       <div>
         <!--Social Media Layout and placeholders -->
         <ul class="social">
