--- a/globowl.html
+++ b/globowl.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta http-equiv="content-type" content="text/html" charset="utf-8">
+<meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="author" content="LauraMellor">
   <meta name="description" content="portfolio of UX and UI design work">
   <title>Ramble Pal Case Study</title>
@@ -224,7 +224,7 @@
               </div>
               <div class="padtop">
                 <picture>
-                  <source srcset="img/globowl/mood-boards-1x.png" media="(width:100%)">
+                  <source srcset="img/globowl/mood-boards-1x.png" media="(width:100em)">
                   <img src="img/globowl/mood-boards-2x.png" alt="Contrasting Mood Boards">
                 </picture>
               </div>
@@ -294,12 +294,10 @@
                 but that provided alternative options, making the design element that allowed users to swap out ingredients a key factor</p>
             </div>
             <h3>Next Time</h3>
-            Users were very interested in knowing where their ingredients come from. A future iteration may include links in the ingredients list to suggested brands that align with GloBowl values of ethically sourced, local ingredients.</p>
+            <p>Users were very interested in knowing where their ingredients come from. A future iteration may include links in the ingredients list to suggested brands that align with GloBowl values of ethically sourced, local ingredients.</p>
           </div>
         </div>
         <!-- close conclusion -->
-      </div>
-      <!-- close process-->
     </div>
   </main>
 
