--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta http-equiv="content-type" content="text/html">
-  <meta charset="utf-8">
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="author" content="LauraMellor">
   <meta name="description" content="portfolio of UX and UI design work">
   <title>LauraMellor UX/UI Designer UKFreelance</title>
@@ -33,7 +32,7 @@
   <!-- For the header -->
   <header class="banner" id="header">
     <div class="container">
-      <div class="navtoggle" id="myNavtoggle">
+      <div class="navtoggle home" id="myNavtoggle">
         <a href="index.html"><img class="logo" src="img/logo2.jpg" alt="Laura Mellor UI"></a>
         <nav>
           <ul>
