--- a/ramble-pal.html
+++ b/ramble-pal.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta http-equiv="content-type" content="text/html" charset="utf-8">
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="author" content="LauraMellor">
   <meta name="description" content="portfolio of UX and UI design work">
   <title>Ramble Pal Case Study</title>
